--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress",
-    "build": "webpack -p --progress",
+    "build": "NODE_ENV=production webpack -p --progress",
     "postinstall": "npm run copy",
     "copy": "npm run copy:mat-comp && npm run copy:mat-default",
     "copy:mat-comp": "cp -R node_modules/materialize-css/sass/components src/css/materialize",
@@ -29,6 +29,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "img-loader": "^1.3.1",
+    "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
