--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,27 @@ jspm_packages
 # Distribution
 dist
 
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Ignoring CSS files since they are auto generated
+src/**/*.css
