--- a/package.json
+++ b/package.json
@@ -1,41 +1,40 @@
 {
   "name": "delhi-ultimate",
-  "version": "1.0.0",
-  "description": "Delhi Ultimate",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server --progress",
-    "build": "NODE_ENV=production webpack -p --progress",
-    "postinstall": "npm run copy",
-    "copy": "npm run copy:mat-comp && npm run copy:mat-default",
-    "copy:mat-comp": "cp -R node_modules/materialize-css/sass/components src/css/materialize",
-    "copy:mat-default": "cp node_modules/materialize-css/sass/style.scss src/css/materialize"
-  },
-  "author": "Satyajeet Parida <shatyajeet@gmail.com>",
-  "license": "ISC",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "material-ui": "^0.20.1",
-    "materialize-css": "^0.97.6",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-router": "^2.5.2",
-    "react-tap-event-plugin": "^1.0.0"
+    "material-components-web": "^0.36.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4"
+  },
+  "scripts": {
+    "precommit": "yarn build && lint-staged",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "prebuild": "rimraf old-build && mv build old-build || true",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "postbuild": "cp -R build/* docs/.",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "img-loader": "^1.3.1",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.8.0",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  }
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "node-sass-chokidar": "^1.3.0",
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.13.5",
+    "rimraf": "^2.6.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,scss}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
+  "homepage": "https://shatyajeet.github.io/delhi-ultimate"
 }
