Fixed package.json homepage

--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "git add"
     ]
   },
-  "homepage": "https://shatyajeet.github.io/delhi-ultimate"
+  "homepage": "https://delhiultimate.in"
 }
